@startuml

title __UI's Class Diagram__\n

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      class com.gmail.ib.projectCrypt.ui.ConfirmDialog {
          + ConfirmDialog()
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      class com.gmail.ib.projectCrypt.ui.ErrorView {
          - explanation : Span
          + ErrorView()
          + setErrorParameter()
      }
    }
  }
  

  namespace com.gmail.ib.projectCrypt {
    namespace ui {
      class com.gmail.ib.projectCrypt.ui.MainLayout {
          - logoutButton : Button
          + MainLayout()
          # onAttach()
          - createMenuButton()
          - createMenuLink()
          - logout()
      }
    }
  }
  

  com.gmail.ib.projectCrypt.ui.ConfirmDialog -up-|> com.vaadin.flow.component.dialog.Dialog
  com.gmail.ib.projectCrypt.ui.ErrorView .up.|> com.vaadin.flow.router.HasErrorParameter
  com.gmail.ib.projectCrypt.ui.ErrorView -up-|> com.vaadin.flow.component.orderedlayout.VerticalLayout
  com.gmail.ib.projectCrypt.ui.MainLayout .up.|> com.vaadin.flow.router.RouterLayout
  com.gmail.ib.projectCrypt.ui.MainLayout -up-|> com.vaadin.flow.component.applayout.AppLayout


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
